--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Github Tutorial</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/fav-icon.webp">
 </head>
 <body>
-    
+    <h1>Header</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum, adipisci? Ipsam officia qui dignissimos accusantium perferendis deleniti eveniet laudantium doloribus? Similique dolor inventore id, est laborum sunt fugit excepturi eos!</p>
 </body>
 </html>
